prevent gnarnana logo from being stretched

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -143,6 +143,7 @@ a {
 #header-section .header-logo-inner-container > img {
     max-width: 50%;
     max-height: 100%;
+    object-fit: contain;
 }
 #header-section .mobile-logo-container {
     flex: 1 1 auto;
